--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "day5",
   "version": "1.0.0",
   "description": "Day 5 Javacsript",
-  "main": "index.js",
+  "main": "day5.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
