--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "day5",
   "version": "1.0.0",
   "description": "Day 5 Javacsript",
-  "main": "day5.js",
+  "main": "day6.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,7 +14,7 @@
     "Day",
     "5"
   ],
-  "author": "George",
+  "author": "StrongCatto",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/StrongCatto/Backend-Javascript/issues"
